--- a/README
+++ b/README
@@ -2,5 +2,8 @@
 
 2002-2022
 
+# mass killing
+https://en.wikipedia.org/wiki/Mass_killing
+
 # staat der nederlanden
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
