--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-# free-killing-in-the-netherlands
+-----------------------------------
+| free-killing-in-the-netherlands |
+-----------------------------------
 
 2002-2022
 
