--- a/README
+++ b/README
@@ -9,3 +9,5 @@ https://en.wikipedia.org/wiki/Mass_killing
 
 # staat der nederlanden
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
+
+nederland ® 2002-2022
