--- a/README
+++ b/README
@@ -3,6 +3,9 @@
 -----------------------------------
 
 
+# psychiatrist
+https://en.wikipedia.org/wiki/Psychiatrist
+
 # mass killing
 https://en.wikipedia.org/wiki/Mass_killing
 
